# dotfiles

./: .gitignore  .gitmodules  ConfigNvimProviders.sh  README.md  Xresources  compton.conf  exports  gitconfig  install  install-nvim-providers  install-system-pkgs.yml  install.conf.yaml  installKdeConfig.sh  install_fonts  tmux-powerlinerc  tmux.conf  xprofile  xsessionrc  zlogin  zpreztorc  zprofile  zshenv  zshrc
config/: Xresources  starship.toml
config/X11/: xinitrc
config/alacritty/: alacritty.yml
config/ansible/: ansible.cfg
config/direnv/: direnvrc
config/environment.d/: 20-gnupg.conf
config/git/: config  ignore
config/gnupg/: gpg-agent.conf  scdaemon.conf
config/ncspot/: config.toml
config/nix/: home.nix
config/nixos/: README.md
config/npm/: config
config/picom/: picom.conf
config/powershell/: Microsoft.PowerShell_profile.ps1
config/sheldon/: plugins.toml
config/ssh/: config
config/tmux/: plugins.toml  tmux.conf  tpm.tmux
config/x11/: xinitrc
config/xmobar/: xmobarrc
config/xmonad/: .gitignore  LICENSE  Main.hs  build  hie.yaml  my-xmonad.cabal  stack.yaml
config/yarn/: config
config/zsh/: .zcompdump  .zhistory  .zprofile  bundles.txt  exports  zpreztorc  zprofile  zsh_plugins.sh  zshenv  zshrc
gnupg/: dirmngr.conf  gpg-agent.conf  gpg.conf  scd-event  scdaemon.conf  sshcontrol
i3/: config  i3blocks.conf  layout.sh
i3/scripts/: battery  battery_label  cpu_usage  disk  docker  iface  load_average  memory  vpn  (+3 more)
mopidy/: mopidy.conf
ssh/: config
termite/: config
todo/: config
zfunc/: alarm  btheadphones  calc
(+93 files in other folders)
