name:           my-xmonad
version:        0.1.0.0
license:        BSD3
license-file:   LICENSE
author:         Carlos Hernandez
maintainer:     hurricanehrndz@techbyte.ca
build-type:     Simple
cabal-version:  >=1.10

executable my-xmonad
  main-is:             Main.hs
  ghc-options:         -Wall -Wno-missing-signatures -O2 -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , xmonad
                     , xmonad-contrib
  default-language:    Haskell2010
